-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17, 18, 19
-
Component/s: client-libs
-
b23
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8289788 | 17.0.5-oracle | Alexey Ivanov | P4 | Resolved | Fixed | b04 |
| JDK-8289376 | 17.0.5 | Zhengyu Gu | P4 | Resolved | Fixed | b01 |
| JDK-8290599 | 11.0.17-oracle | Alexey Ivanov | P4 | Resolved | Fixed | b03 |
| JDK-8289377 | 11.0.17 | Zhengyu Gu | P4 | Resolved | Fixed | b01 |
| JDK-8293552 | 8u361 | Alexey Ivanov | P4 | Resolved | Fixed | b01 |
=1373265== 158,464 bytes in 77 blocks are definitely lost in loss record 16,222 of 16,244
==1373265== at 0x48496AF: realloc (vg_replace_malloc.c:1437)
==1373265== by 0x4AFB32B8: ???
==1373265== by 0x4AFB4A80: ???
==1373265== by 0x4AFB4F93: ???
==1373265== by 0x49C27A74: Java_sun_font_FontConfigManager_getFontConfig (fontpath.c:1103)
==1373265== by 0x24A855D0: ???
==1373265== by 0x24A812D5: ???
==1373265== by 0x24A812D5: ???
==1373265== by 0x24A8142E: ???
==1373265== by 0x24A813E9: ???
==1373265== by 0x24A812D5: ???
==1373265== by 0x24A8142E: ???
- backported by
-
JDK-8289376 sun.font.FontConfigManager.getFontConfig() leaks charset
-
- Resolved
-
-
JDK-8289377 sun.font.FontConfigManager.getFontConfig() leaks charset
-
- Resolved
-
-
JDK-8289788 sun.font.FontConfigManager.getFontConfig() leaks charset
-
- Resolved
-
-
JDK-8290599 sun.font.FontConfigManager.getFontConfig() leaks charset
-
- Resolved
-
-
JDK-8293552 sun.font.FontConfigManager.getFontConfig() leaks charset
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/027302b5
-
Commit
openjdk/jdk17u-dev/f044785f
-
Commit
openjdk/jdk/dea6e886
-
Review
openjdk/jdk11u-dev/1131
-
Review
openjdk/jdk17u-dev/447
-
Review
openjdk/jdk18u/150
-
Review
openjdk/jdk/8187