8284680: sun.font.FontConfigManager.getFontConfig() leaks charset

Backport-of: dea6e886af20457597dd02dacf1e80273a7165a7